# WoOdoo

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml
alembic/: env.py
backend/: __init__.py  celery_app.py  main.py  pyproject.toml
backend/api/: __init__.py  connections.py
backend/auth/: __init__.py  dependencies.py  middleware.py  router.py  service.py
backend/clients/: __init__.py  odoo.py  woocommerce.py  wordpress.py
backend/connections/: __init__.py  health.py  health_router.py
backend/core/: config.py  crypto.py
backend/jobs/: __init__.py  router.py  schemas.py  service.py
backend/matching/: __init__.py  auto_match.py  router.py
backend/models/: __init__.py  database.py  orm.py
backend/orders/: __init__.py  router.py  schemas.py  sync.py
backend/schemas/: __init__.py  connections.py  odoo.py  sync.py  websocket.py  woocommerce.py
backend/setup/: router.py
backend/sync/: hashing.py  mappings.py
backend/sync/engines/: categories.py  images.py  products.py  stock.py
backend/tasks/: __init__.py  celery_app.py  orchestrator.py  phase_runner.py  retry.py  review_queue.py  scheduler.py
backend/webhooks/: __init__.py  health.py  processor.py  router.py
backend/ws/: __init__.py  manager.py  publisher.py  router.py
docker/: Dockerfile
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  job-builder.md  sync-engine.md  troubleshooting.md  webhooks.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/types/: api.ts
scripts/: generate-keys.sh
(+22 files in other folders)
